--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#141414" />
-  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
+  <meta name="description" content="info restaurant website, you can search popular restaurant in the world">
   <link rel="apple-touch-icon" href="icons/apple-touch-icon-152x152.png" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous" />
